Fix HTML formatting Fix issue with results on mobile not displaying correctly due to image size Change the look of the popup box to ensure it works well on mobile increases the size of the checkbox and the drop down menu on mobile to make them easier to select

--- a/index.css
+++ b/index.css
@@ -3,173 +3,164 @@ body {
     background-color: #ffcd44;
 }
 
-#myModal {
-    display: none; 
-    position: fixed;
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: black;
-    background-color: rgba(0,0,0,0.4); 
-  }
-
-
-.block{
-    display: block !important;
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; 
-    padding: 20px;
-    border: 1px solid #ff9900;
-    height: 90%;
-    width: 90%; 
-    text-align: center;
-    overflow: hidden;
-    overflow: auto;
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-
-
-
-/*when viewed on a desktop*/
-@media screen and (min-width:63em) {
-
- #results{
-    display: flex;
-    flex-wrap: wrap;
-  
- }
-
- .item{
-    max-width: 45%;
-    display: block;
-    margin-bottom: 1em;
-    min-height:30em;
-    width: 40em;
-    border: 1px solid #000000;
-    text-align: center;
-    margin: auto;
-    margin-bottom: 1em;
-    background-color: white;
-    border-radius: 3em;
-}
-
-
-}
-
-/*when viewed on a mobile*/
-@media screen and (max-width:62.99em) {
-    #results {
-        display: block;
-     }
-
-     
-.item{
-    display: block;
-    margin-bottom: 1em;
-    width: 100%;
-    border: 1px solid #000000;
-    text-align: center;
-    margin: auto;
-    margin-bottom: 1em;
-    background-color: white;
-    border-radius: 3em;
-}
-}
-
-
-
-
-#searchboxButton{
-background-color: blue;    
-border-radius: 2em;
-width: 100%;
-height: 3em;
-color: white;
-}
-
-
-#search{
-    width: 100%;
-    margin-bottom: 1em;
-    background-color: white;
-}
-
-#searchBox{
-    width: 99%;
-    height: 2em;
-    font-size: 1em;
-    border: 1px solid #000000;
-    margin-bottom: 1em;
-    border-radius: 3em;
-}
-
-
-.item p{
-    margin: 1em;
-    padding: 0;
-}
-
-.item h2{
-    white-space: nowrap; 
-    width:90%;
-    overflow: hidden;
-    text-overflow: ellipsis; 
-   padding: 1cap 0;
-   margin: 1em;
-}
-
-.item img{
-    max-height:7em;
-}
-
-.itemImage{
-    display: inline-block;
-}
-
-
-.fullsizeImage{
-   max-width: 50%;
-    max-height: 50%;
-}
-
-#loading{
+#loading {
     display: none;
     text-align: center;
     margin-top: 1em;
 }
 
-
-.hide{
+.hide {
     display: none !important;
 }
 
-.showLoad{
+.showLoad {
     display: block !important;
 }
 
-#resultAmountDropdown{
-    width: 4em;
+/*************** POPUP WINDOW SECTION ********************/
+#popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: black;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.block {
+    display: block !important;
+}
+
+.modalContent {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #ff9900;
+    height: 70%;
+    width: 70%;
+    text-align: center;
+    overflow: hidden;
+    overflow: auto;
+    border-radius: 3em;
+}
+
+/* The Close Button */
+.close {
+    color: #ff0000;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/******************* SEARCH RESULTS SECTION *******************/
+.item p {
+    margin: 1em;
+    padding: 0;
+}
+
+.item h2 {
+    white-space: nowrap;
+    width: 90%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 1cap 0;
+    margin: 1em;
+}
+
+.item img {
+    max-height: 7em;
+    max-width: 15em;
+}
+
+.itemImage {
+    display: inline-block;
+}
+
+.fullsizeImage {
+    max-width: 50%;
+    max-height: 50%;
+}
+
+/*when viewed on a desktop*/
+@media screen and (min-width: 63em) {
+    #results {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .item {
+        max-width: 45%;
+        display: block;
+        margin-bottom: 1em;
+        min-height: 30em;
+        width: 40em;
+        border: 1px solid #000000;
+        text-align: center;
+        margin: auto;
+        margin-bottom: 1em;
+        background-color: white;
+        border-radius: 3em;
+    }
+}
+
+/*when viewed on a mobile*/
+@media screen and (max-width: 62.99em) {
+    #results {
+        display: block;
+    }
+
+    .item {
+        display: block;
+        margin-bottom: 1em;
+        width: 100%;
+        border: 1px solid #000000;
+        text-align: center;
+        margin: auto;
+        margin-bottom: 1em;
+        background-color: white;
+        border-radius: 3em;
+    }
+
+    #imageCheckbox{
+        height: 2.25em;
+        width: 2.25em
+    }
+
+    #AmountDropdown {
+        width: 4em;
+        height: 2.25em;
+    }
+}
+
+/********************** SEARCHBOX SECTION *********************/
+#searchboxButton {
+    background-color: blue;
+    border-radius: 2em;
+    width: 100%;
+    height: 3em;
+    color: white;
+}
+
+#search {
+    width: 100%;
+    margin-bottom: 1em;
+    background-color: white;
+    display: inline-block;
+}
+
+#searchBox {
+    width: 100%;
     height: 2em;
     font-size: 1em;
     border: 1px solid #000000;
@@ -177,8 +168,17 @@ color: white;
     border-radius: 3em;
 }
 
+#resultAmountDropdown {
+    width: 4em;
+    height: 2.25em;
+    font-size: 1em;
+    border: 1px solid #000000;
+    margin-bottom: 1em;
+    border-radius: 3em;
+    text-align: center;
+}
 
-.searchError{
+.searchError {
     font-size: 1em;
     color: #ff0000;
     margin-bottom: 1em;
